Bug 1652743 - Invalidate window origin recursively.

Differential Revision: https://phabricator.services.mozilla.com/D83908